--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "wish-theory",
   "private": true,
@@ -16,6 +15,7 @@
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
+    "@types/node": "^25.0.6",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
